tests/cases/attributes/errors/attribute-derive-unsupported.ari
@derive(Display)
struct Point {
  x: i64,
}

fn main() -> i64 {
  return 0;
}
